--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "devDependencies": {
     "sass": "^1.69.5",
     "vite": "^5.0.8"
+  },
+  "dependencies": {
+    "boring-name-generator": "^1.0.3"
   }
 }
